# SynapseAnalytics

./: .bashrc  .gitignore  AmoCRM.py  Get_base_adv_stat.sql  GoogleBQ.py  GoogleBQ_deals.py  README.md  amo_crm.py  amo_deal_fields_schema - Copy.json  amo_deal_fields_schema.json  amocrmclass.py  bq_tb_amo_deals_raw_shema.json  config.py  get_all_deals_from_amo_crm.py  git.sh  google_bigquery.py  google_sheets.py  put_all_deals_from_amo_crm_to_gbq.py  put_amo_raw_to_gbq.py  pyproject.toml  synapse_analytics.py  temp_updated_leads_5.json  test.py  test2.py  update_amo_deals_raw.py  update_deals_from_amo_crm.py  yadir.py
output/: output_deals_13451124.json  output_deals_14715161.json  output_deals_15133287.json  output_deals_16795669.json  output_deals_16826331.json  output_deals_17192175.json  output_deals_17220106.json  output_deals_17687136.json  output_deals_18220992.json  output_deals_18748528.json  output_deals_19677026.json  output_deals_21804934.json  output_deals_24800578.json  output_deals_25185540.json  output_deals_25364966.json  output_deals_25365724.json  output_deals_25377874.json  output_deals_25515384.json  output_deals_25645840.json  output_deals_25646038.json  output_deals_25646120.json  output_deals_25646182.json  output_deals_25646248.json  output_deals_25662642.json  output_deals_25763430.json  output_deals_25872738.json  output_deals_25877096.json  output_deals_25945362.json  output_deals_25977190.json  output_deals_25999268.json  output_deals_26000376.json  output_deals_26000398.json  output_deals_26011972.json  output_deals_26021390.json  (+216 more)
(+22 files in other folders)
