[tool.poetry]
name = "synapseanalytics"
version = "0.1.0"
description = "Система сбора и анализа данных рекламных кабинетов, систем аналитики и crm"
authors = ["Aleksandr Skakalkin <7224918@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
pandas = "^1.1.2"
python-dotenv = "^0.14.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
